[project]
name = "panda_quantflow"
version = "0.1.0"
description = "PandaAI QuantFlow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Libraries
    "numpy>=2.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "typing-extensions>=4.9.0",

    # Web Framework & Server
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-socketio>=5.11.0",
    "tornado>=6.4",

    # Data Science & Machine Learning
    "scikit-learn>=1.5.0",
    "tensorflow>=2.16.0",
    "torch>=2.4.0",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "statsmodels>=0.14.4",
    "matplotlib>=3.9.4",
    "openai>=1.14.0",
    "tqdm>=4.66.0",

    # Databases
    "pymongo>=4.6.0",
    "motor>=3.4.0",
    "redis>=5.0.1",
    "pymysql>=1.1.0",
    "DBUtils>=3.1.0",

    # Async & Networking
    "aio-pika>=9.5.0",
    "anyio>=4.3.0",
    "async-timeout>=4.0.3",
    "certifi>=2024.2.2",
    "charset-normalizer>=3.3.2",

    # Data Sources & Utilities
    "tushare>=1.4.21",
    "rqdatac>=3.2.2",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "cloudpickle>=3.0.0",
    "jsonpickle>=3.0.0",
    "json2html>=1.3.0",
    "uuid6>=2023.8.16",
    "ratelimit>=2.2.1",
    "ipython>=8.22.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.23.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "jupyterlab>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
